# phd-deepread-workflow

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  PUBLISHING.md  README.md  SECURITY.md  SETUP_GITHUB.md  SKILL.md  docker-compose.yml  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: publish.yml  test.yml
config/: config.yaml
docs/: decision-tree.md  index.md  workflow-guide.md
examples/: example-output.md
scripts/: __init__.py  batch.sh  canvas.py  extract.py  generate.py  phd-deepread  phd_deepread.py  process.py  setup.sh  verify.py
templates/: .clauderules  critical-thinking.canvas
tests/: conftest.py  test_canvas.py  test_extract.py  test_generate.py  test_verify.py
