[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phd-deepread-workflow"
version = "0.1.5"
description = "Transform academic PDFs into structured literature notes and critical-thinking canvases for Obsidian"
readme = "README.md"
authors = [
    {name = "Helen Insights", email = "heleninsights@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["pdf", "academic", "obsidian", "literature-review", "research", "workflow"]
requires-python = ">=3.9"
dependencies = [
    "PyMuPDF>=1.24.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]

[project.urls]
Homepage = "https://github.com/heleninsights-dot/phd-deepread-workflow"
Repository = "https://github.com/heleninsights-dot/phd-deepread-workflow.git"
Issues = "https://github.com/heleninsights-dot/phd-deepread-workflow/issues"

[project.scripts]
phd-deepread = "scripts.phd_deepread:main"

[tool.setuptools]
packages = ["scripts"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
"*" = ["scripts/templates/*", "scripts/templates/.*", "scripts/templates/clauderules.md", "docs/*", "examples/*"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --strict-config"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]